fix for DOCS-3167: better width for share setting dialog and align topbar help and settings icon

--- a/ui/apps/io.ox/files/share/style.less
+++ b/ui/apps/io.ox/files/share/style.less
@@ -283,6 +283,7 @@
             border: 0;
             background: transparent;
             font-size: 18px;
+            line-height: 24px;
         }
     }
 
